<resources>
    <string name="app_name">ShoeStore</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="to_the">to the </string>
    <string name="shoe_store">Shoe Store</string>
    <string name="log_in">Log In</string>
    <string name="instructions">Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_button">floating button</string>
    <string name="add_sneaker_button">Add sneaker button</string>
    <string name="log_out">Log Out</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
