<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_the"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_store"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_marginTop="50dp"
            android:padding="4dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAlt"
            />

    </LinearLayout>
</layout>